force-app/main/default/objects/Flow_Scan__c/Flow_Scan__c.object-meta.xml
<CustomObject>
    <label>Flow Scan</label>
    <nameField>
        <displayFormat>FHC-{0000}</displayFormat>
        <label>Scan Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flow Scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>