force-app/main/default/objects/Flow_Scan__c/fields/Affected_Flows__c.field-meta.xml
<CustomField>
    <fullName>Affected_Flows__c</fullName>
    <label>Affected Flows</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>