force-app/main/default/objects/Flow_Scan__c/fields/Health_Score__c.field-meta.xml
<CustomField>
    <fullName>Health_Score__c</fullName>
    <description
  >Calculated org health score percentage (0-100%) computed upon scan completion.</description>
    <label>Health Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>