force-app/main/default/objects/Flow_Scan__c/fields/Scan_Date__c.field-meta.xml
<CustomField>
    <fullName>Scan_Date__c</fullName>
    <label>Scan Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>