force-app/main/default/objects/Flow_Scan__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default></value>
            <value><fullName>Running</fullName><default>false</default></value>
            <value><fullName>Complete</fullName><default>false</default></value>
            <value><fullName>Failed</fullName><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>