force-app/main/default/objects/Flow_Scan__c/fields/Total_Flows_Scanned__c.field-meta.xml
<CustomField>
    <fullName>Total_Flows_Scanned__c</fullName>
    <label>Total Flows Scanned</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>