force-app/main/default/objects/Flow_Scan__c/fields/Warnings__c.field-meta.xml
<CustomField>
    <fullName>Warnings__c</fullName>
    <label>Warnings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>